# Unified-ticket-management-system

./: .gitignore  AZURE_SETUP_GUIDE.md  CLAUDE.md  DEPLOYMENT.md  EMAIL_API_DOCUMENTATION.md  EMAIL_ENVIRONMENT_GUIDE.md  EMAIL_INTEGRATION_ANALYSIS.md  EMAIL_INTEGRATION_CHECKLIST.md  EMAIL_RECEIVE_FLOW.md  EMAIL_SEND_FLOW.md  END_TO_END_EMAIL_FLOW.md  GRAPH_AUTHENTICATION.md  M365_OUTBOUND_DELIVERY_ISSUE.md  POSTMAN_EMAIL_TESTING.md  README.md  UTMS_Backend_Review.pptx  pyproject.toml  render.yaml  requirements.txt
.github/workflows/: sla-sweep.yml
backend/: requirements.txt  test_db.py
backend/app/: main.py
backend/scripts/: seed.py
docs/: API.md  ARCHITECTURE.md
docs/testing/: TEST_EMAILS.md
frontend/: .env  index.html  package-lock.json  package.json  tailwind.config.js  tailwind.config.ts  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo
frontend/src/: App.tsx  index.css  middleware.ts
presentations/: UTMS_Enterprise_Automation_Roadmap.pptx  generate_deck.py
rbac-service/: .gitignore  CLAUDE.md  package-lock.json  render.yaml
rbac-service/backend/: .env.example  requirements.txt
rbac-service/frontend/: .env.example  next.config.mjs  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
shared_models/: .gitignore  README.md
tests/: test_import.py
ticketing-service/: CLAUDE.md  README.md  requirements.txt
unified-backend/: docker-compose.yml  requirements.txt  test_db.py
unified-frontend/: .env.example  CLAUDE.md  _tmp_verify_sla2.js  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
(+858 files in other folders)
